# Europa

./: .env.example  .gitignore  README.md  pyproject.toml  structure.md
backtest/: __init__.py  engine.py  pair.py
config/: markets.json
data/: README.md  SCHEMA.md
factors/: __init__.py  core.py  repository.py  signals.py
models/: __init__.py  baseline.py  config.py  training.py
trading/: __init__.py  __main__.py  algo.py  analysis.py  broker.py  cli.py  config.py  data.py  domain.py  executor.py  factors.py  gateway.py  indicators.py  inference.py  models.py  parser.py  plotting.py  risk.py  signals.py  storage.py  strategy.py
