[project]
name = "europa-jupiter-perps"
version = "0.1.0"
description = "Medium-slow swing trading scaffold for Jupiter perpetuals."
requires-python = ">=3.11"
dependencies = [
	"plotly>=5.24",
]

[project.scripts]
sol-perps-bot = "trading.cli:main"

[tool.setuptools]
packages = ["trading", "factors", "models", "backtest"]

[tool.pytest.ini_options]
pythonpath = ["."]
